input:focus sets z-index of input as 3 which exceeds the z-index of the toolbar. fixed the same

--- a/react-client/src/components/Toolbar/Toolbar.css
+++ b/react-client/src/components/Toolbar/Toolbar.css
@@ -5,7 +5,7 @@
   box-shadow: 7px 6px lightgrey;
   left: 0;
   top: 0;
-  z-index: 2;
+  z-index: 5;
 }
 
 .funRetrospectivesHeading {
